--- a/credits.html
+++ b/credits.html
@@ -308,134 +308,87 @@ z-index: 3;
 <div id="stuff">
 
 <br><br><br>
-<center>
-<img src="https://i.imgur.com/Ron7raE.png"><br>
-<!--------------------caixinha------------------------>
-<script type="text/javascript"> 
-iens6=document.all||document.getElementById
-ns4=document.layers
-//specify speed of scroll (greater=faster)
-var speed=1
-if (iens6){
-document.write('<div id="container" style="position:relative;width:201px;height:160px; border-right: solid 1px; border-top: solid 0px; border-left: solid 1px; color: #DACFCE; border-bottom: solid 2px; overflow:hidden; background-color:#fffcfc;">')
-document.write('<div id="content" style="position:absolute;width:190px;top:6px;text-align:justify; padding: 5px; font-size:8px; font-family:tahoma; color:#D0C3C2;">')
-}
-</script>
-<!-------------------------coisinhas---------------------------->
-<br>
-<font color="#d3a5a5"><center>･ ･ ･ middlepot disclaimer ･ ･ ･</center></font><br>
-this credits page contains all necessary information about my website, it will be frequently updated as necessary. before you manifests anyway, read this page completely. if you feel you must have your name here for any reason, please use the contact form to notify me and i will do my best. any manifestation on the improper location or offensive words will be ignored and deleted without notice.<br>
-the middlepot website content is provided on an "as is" basis and therefore, makes no warranties of any kind, expressed or implied to the fullest extent permissible by applicable law. i am not responsible for any damages ( including time loss ) due to using the website. the middlepot website reserves the right to refuse service to anyone at any time, and to remove anything, content or communications for any reason, at any time and without notice.<br>
-the middlepot website has links to other sites, which, in my view, may contain useful information / tools for the visitors. our disclaimer does not apply to third party sites, so that if another visit from our site should read the same privacy policy.<br>
-i am not responsible for the privacy policy or content present in those sites.<br>
-i use cookies to store information such as your personal preferences when you visit my website.<br>
-all personal information collected by cookies will be used to help make your visit to my website as productive and enjoyable as possible.<br>
-ensuring the confidentiality of personal data of my site's users is important for me.<br>
-all personal information concerning visitors who use the middlepot website will be treated in accordance with the applicable law.<br>
-it is recommended that you consult this disclaimer regularly in order to continually update.
-
-<!------------------------------------------------------------->
- 
- 
- 
-</ilayer><script language="JavaScript1.2"> 
-if (iens6)
-document.write('</div></div>')
-</script>
-
-<table width="200px"><td><div align="right">
-
-<a href="#" onMouseover="moveup()" onMouseout="clearTimeout(moveupvar)" ><img src="https://i.imgur.com/ExriANt.gif"/></a><a href="#" onMouseover="movedown()" onMouseout="clearTimeout(movedownvar)" ><img src="https://i.imgur.com/DRC6i9K.gif"/></a></div></td></table>
-
-<script language="JavaScript1.2">
-if (iens6){
-var crossobj=document.getElementById? document.getElementById("content") : document.all.content
-var contentheight=crossobj.offsetHeight
-}
-else if (ns4){
-var crossobj=document.nscontainer.document.nscontent
-var contentheight=crossobj.clip.height
-}
- 
-function movedown(){
-if (iens6&&parseInt(crossobj.style.top)>=(contentheight*(-1)+100))
-crossobj.style.top=parseInt(crossobj.style.top)-speed+"px"
-else if (ns4&&crossobj.top>=(contentheight*(-1)+100))
-crossobj.top-=speed
-movedownvar=setTimeout("movedown()",20)
-}
- 
-function moveup(){
-if (iens6&&parseInt(crossobj.style.top)<=0)
-crossobj.style.top=parseInt(crossobj.style.top)+speed+"px"
-else if (ns4&&crossobj.top<=0)
-crossobj.top+=speed
-moveupvar=setTimeout("moveup()",20)
-}
-</script>
-<!--------------------------caixinha---------------------------->
-<br><br><br></center>
 
 <div style="position: absolute; left:10%; right:10%;">
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">// contact</font></font></font><br>
+<font family = "Verdana"><font color="#ddb5b5"><font size="1">
+　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;please, read this first :<br><br></font>
+<font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
+i seek transparency and respect the work of others on this site, so i value giving credit as something important. however, it is inevitably difficult to give credits appropriately and correctly when searching for content on sites like google, tumblr, pinterest, we heart it or even old web archived sites. to avoid crediting reposted content, i refuse to credit much of the content i use in my own work if i'm not sure the person owns the image / audio. unfortunately, fake sources are very common. i don't want to spread misinformation and lies, as this can cause even worse problems than just the absence of a source.<br>
+i am sorry if i offended someone by not giving credits, i am always willing to properly credit and even delete someone's content, if that person so wishes. please do not hesitate to contact me if you see something of yours being used and you are not satisfied with it.<br>
+a lot of the content i produce is made from scratch by me, but a lot of it is only edited or partially made by me. i try to be as clear as possible about it, but if you have any questions or think i'm not being clear enough, please contact me and i will try to explain exactly how was the process of finding the content, editing and so on ( even publicly, if you wish so )<br>
+it is difficult to be completely transparent about how much content is edited or not, especially without having the base content as a reference. content is often edited beforehand when reposted. i try my best not to cause problems for other artists, so again : i'm sorry !
+<br>
+</font></font></font></font>
+<br><br><br>
+<div style="line-height:15px">
+<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">　/ contact</font></font></font><br>
 <font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　form base code by <i>jotform</i></font></font></font><br><br>
 
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">// help</font></font></font><br>
+<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">　/ help</font></font></font><br>
 <font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　<i>music :</i> dreams * unknown</font></font></font><br><br>
 
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">// gaming</font></font></font><br>
+<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">　/ gaming</font></font></font><br>
 <font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　graphics from <i>ragnarok online</i> ;<br>
 <font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　<i>music :</i> higher than the sun * ragnarok online ost<br><br>
 
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">// poofties</font></font></font><br>
+<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">　/ poofties</font></font></font><br>
 <font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　<i>music :</i> heartsng1 * unknown</font></font></font><br><br>
 
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">// milky woods</font></font></font><br>
+<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">　/ milky woods</font></font></font><br>
 <font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　thank you <i>snut</i> and <i>fairyhalim</i> for inspiration !</font></font></font><br>
 <font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　<i>music :</i> ratinha branca * unknown</font></font></font><br><br>
+</div>
+<font family = "Verdana"><font color="#ccb6b6"><font style="font-size:9px">※ more credits can be found on the respective pages</font></font></font><br><br><br>
+<br><br>
 
-<font family = "Verdana"><font color="#B3A49A"><font style="font-size:9px">other credits are on the pages</font></font></font><br><br><br>
 
-
-
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">hosting sites that i currently use :</font></font></font><br><br>
-<font family = "Verdana"><font color="#ddb5b5"><font style="font-size:9px">
-　　　html : github<br>
-　　　image : imgur / catbox.moe / google photos<br>
-　　　mp3 : catbox.moe<br>
-　　　rar : catbox.moe<br>
-　　　webm : catbox.moe<br>
-　　　swf : catbox.moe<br>
-　　　font : catbox.moe<br>
-　　　txt : catbox.moe<br>
+<font family = "Verdana"><font color="#ddb5b5"><font style="font-size:10px">　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;hosting sites that i currently use :</font></font></font><br><br>
+<font family = "Verdana"><font color="#AD9F97"><font style="font-size:9px">
+　　html : github<br>
+　　image : imgur / catbox.moe / google photos<br>
+　　mp3 : catbox.moe<br>
+　　rar : catbox.moe<br>
+　　webm : catbox.moe<br>
+　　swf : catbox.moe<br>
+　　txt : catbox.moe<br>
 <br>
 </font></font></font>
-<font family = "Verdana"><font color="#B3A49A"><font size="1">
-<font size="2">※</font> i'll update this list whenever i change a hosting.<br>
-<font size="2">※</font> these sites are safe and all of them use https. privacy policy and use of cookies should be checked on the related websites.</font></font></font><br><br><br><br>
-
+<font family = "Verdana"><font color="#ccb6b6"><font size="1">
+※ i will update this list whenever i change a hosting.<br>
+※ these sites are safe and all of them use https. privacy policy and use of cookies should be checked on the related websites.</font></font></font><br><br><br><br>
+<br>
 <font family = "Verdana"><font color="#ddb5b5"><font size="1">
-　　[ important safety tips ]<br><br></font>
+　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;important safety tips :<br><br></font>
 <font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
 i'm sorry, i do bake some cookies in this website !<br>
 this is because of the hosting sites and scripts. they are safe and i never had problems with them.. cookies are not always welcome, but i think it's inevitable in some cases.<br>
 that's okay if you don't want cookies, though ! you can always use the <i>anonymous mode</i> on your browser even on mobile, and you'll be simply free from all cookies. the <i>opera browser</i> is the best one for your privacy as it contains VPN itself.<br>
 if you don't like javascript or flash, you can disable it too in your browser settings, this website works 80% ok without these.<br>
 also, i sugest you to use an extension for encryption ( <i>https everywhere</i> is what i use ). i try to keep everything encrypted, but sometimes ssl certificates can expire and take a while to be renewed.. !<br>
-<br>
 i always try to keep the visitors safe and privacy is something i respect, so please, any issues feel free to contact me !
-<br><br>
+<br><br><br>
 </font></font></font></font>
 <font family = "Verdana"><font color="#ddb5b5"><font size="1"><br><br>
-　　[ important accessibility tips ]<br><br></font>
+　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;important accessibility tips :<br><br></font>
 <font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
 if you're on pc and you think the font size is too small please zoom in a little in your browser !<br>
 usually any font bigger than 10px is uncomfortable for me to read. i keep most websites 75% zoom out because of it.. i would like to make my website accessible for everyone, but i believe it should be accessible for myself first, i'm sorry ; ;<br>
 if the font colors seem too light for you to read i believe a little of zoom in and screen brightness adjust can help ! i can't really change the font colors because it would ruin the whole aesthetic of the website... again, i'm sorry.<br>
-i try to make my layouts compatible for all screen sizes but it's a little hard to do it with image based layouts, like mine. if you're on mobile i suggest you turn your device horizontally for better compatibility !!<br><br>
-thank you for your patience.<br>
+i try to make my layouts compatible for all screen sizes but it's a little hard to do it with image based layouts, like mine. if you're on mobile i suggest you turn your device horizontally for better compatibility !!<br>
+thank you for your patience.<br><br>
 </font></font></font></font>
-<br><br><br>
+<font family = "Verdana"><font color="#ddb5b5"><font size="1"><br><br><br>
+　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;website disclaimer :<br><br></font>
+<font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
+this website content is provided on an "as is" basis and therefore, makes no warranties of any kind, expressed or implied to the fullest extent permissible by applicable law. i am not responsible for any damages ( including time loss ) due to using the website. the middlepot website reserves the right to refuse service to anyone at any time, and to remove anything, content or communications for any reason, at any time and without notice.<br>
+this website has links to other sites, which, in my view, may contain useful information / tools for the visitors. this disclaimer does not apply to third party sites.<br>
+i am not responsible for the privacy policy or content present in those sites.<br>
+all personal information collected by cookies will be used to help make your visit to my website as productive and enjoyable as possible.<br>
+ensuring the confidentiality of personal data of my site's users is important for me !<br>
+all personal information concerning visitors who use the middlepot website will be treated in accordance with the applicable law.<br>
+it is recommended that you consult this page regularly in order to continually update.<br>
+</font></font></font></font>
+<br><br>
 
 <br><br>
 </div>
