--- a/portfolio.html
+++ b/portfolio.html
@@ -69,9 +69,7 @@ background-color: #f9f0ed;
 border: 1px dotted #e2d5d0;
 }
 #linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-
-</style>
+#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }</style>
 
 <!--
 tooooooooltip
@@ -197,9 +195,7 @@ z-index: 3;
 <img src="https://i.imgur.com/Jm86w3I.png"/>
 
 <div onselectstart="return false" id="menu1">
-<p style="font-size:10px;line-height:50%;"><br><br>
-
-　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
+<p style="font-size:10px;line-height:50%;"><br><br>　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/links" style="text-decoration: none; color:#a3948d;">links</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
@@ -315,8 +311,8 @@ z-index: 3;
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> collage<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
 <img width="350px" height="auto" src="https://i.imgur.com/VZmuGK3.png"><br><br>
-<img width="350px" height="auto" src="https://i.imgur.com/tBuoQYd.png"><br><br><br>
-<img width="135px" height="auto" src="https://i.imgur.com/V1hKb0T.png"> <img width="135px" height="auto" src="https://i.imgur.com/qUi9ByM.png"> <img width="135px" height="auto" src="https://i.imgur.com/zXLN6tk.png">
+<img width="350px" height="auto" src="https://i.imgur.com/u8V6LH9.png"><br><br><br>
+<img width="175px" height="auto" src="https://i.imgur.com/Thd4bR1.png"> <img width="175px" height="auto" src="https://i.imgur.com/WR8XveK.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
