--- a/contact.html
+++ b/contact.html
@@ -459,7 +459,7 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"submit","qid":"2","text":". * 
 /* | */
 @media screen and (min-width: 768px) {
   .jotform-form {
-    padding: 60px 0;
+    padding: 70px 0;
   }
 }
 /* | */
@@ -563,11 +563,11 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"submit","qid":"2","text":". * 
 }
 .supernova {
   background-image: none;
-  background-image: url("https://www.jotform.com/uploads/potemi/form_files/bgichigominipink.png");
+  background-image: url("");
 }
 #stage {
   background-image: none;
-  background-image: url("https://www.jotform.com/uploads/potemi/form_files/bgichigominipink.png");
+  background-image: url("");
 }
 /* | */
 .form-all {
@@ -582,11 +582,14 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"submit","qid":"2","text":". * 
   background-position: center top;
 }
 .form-line {
+cursor: url(https://i.imgur.com/C9RGjYt.png), progress;
   margin-top: 12px;
   margin-bottom: 12px;
 }
 .form-line {
-  padding: 12px 36px;
+cursor: url(https://i.imgur.com/C9RGjYt.png), progress;
+  padding: 5px 100px;
+
 }
 .form-all .form-submit-button,
 .form-all .form-submit-reset,
@@ -603,32 +606,34 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"submit","qid":"2","text":". * 
 .form-all .form-submit-reset,
 .form-all .form-submit-print {
   height: 30px;
-  width: 84px;
+  width: 60px;
   font-size: 1em;
   padding: 9px 15px;
-  font-family: "Tahoma", sans-serif;
-  font-size: 13px;
+  font-family: "Verdana", sans-serif;
+  font-size: 10px;
   font-weight: normal;
   border: none;
   border-width: 0px !important;
-  border-style: dotted !important;
-  border-color: #e1bdbd !important;
+outline: none;
+cursor: url(https://i.imgur.com/C9RGjYt.png), progress;
 }
 .form-all .qq-upload-button,
 .form-all .form-submit-button,
 .form-all .form-submit-reset,
 .form-all .form-submit-print {
   color: #9a8888 !important;
-  background: #f8e6e6;
-  box-shadow: none;
+  background: #faf0f0;
+  box-shadow: 2px 2px 2px #f5e4e4;
   text-shadow: none;
+outline: none;
+cursor: url(https://i.imgur.com/EZZ5Vol.png), progress;
 }
 .form-all .form-pagebreak-back,
 .form-all .form-pagebreak-next {
   font-size: 1em;
   padding: 9px 15px;
-  font-family: "Lucida Grande", sans-serif;
-  font-size: 14px;
+  font-family: "Verdana", sans-serif;
+  font-size: 10px;
   font-weight: normal;
 }
 /*
@@ -670,6 +675,7 @@ h2 ~ .form-subHeader {
 .form-textbox,
 .form-textarea {
   padding: 3px 2px 1px 2px; outline:none; 
+cursor: url(https://i.imgur.com/C9RGjYt.png), progress;
 }
 .form-textbox,
 .form-textarea,
@@ -680,10 +686,12 @@ h2 ~ .form-subHeader {
   background-color: #fff9f9;
 }
 .form-textbox {
-  height: 14px;
+  height: 18px;
+width:200px;
 }
 .form-textarea {
-  height: 80px;
+  height: 90px;
+width:200px;
 }
 [data-type="control_dropdown"] .form-input,
 [data-type="control_dropdown"] .form-input-wide {
@@ -691,7 +699,7 @@ h2 ~ .form-subHeader {
 }
 .form-buttons-wrapper {
   margin-left: 0 !important;
-  margin-left: 156px !important;
+  margin-left: 130px !important;
   text-align: left;  outline:none; 
 }
 .form-header-group {
@@ -844,6 +852,7 @@ li[data-type="control_image"] img {
   }
   .form-label {
     width: 100% !important;
+cursor: url(https://i.imgur.com/C9RGjYt.png), progress;
   }
   .form-label-left,
   .form-label-right {
@@ -851,6 +860,8 @@ li[data-type="control_image"] img {
     float: none;
     text-align: left;
     width: auto!important;
+cursor: url(https://i.imgur.com/C9RGjYt.png), progress;
+
   }
   .form-line,
   .form-line.form-line-column {
@@ -1084,30 +1095,30 @@ a:hover {
     -webkit-border-radius : 10px;
     -khtml-border-radius : 10px;
     border-radius : 10px;
-    padding : 2px;
-    padding-left : 3px;
-    padding-right : 3px;
+    padding : 5px;
+    padding-left : 5px;
+    padding-right : 5px;
     outline : none;
     background-image : url(https://i.imgur.com/AgXOBtX.png);
     font-family : Verdana;
-    font-size : 10px;
-    COLOR : #CEB6B6;
+    font-size : 9px;
+    COLOR : #bda8a8;
 }
 
 .form-textbox {
     border : 1px dotted #CEB6B6;
-    -moz-border-radius : 20px;
-    -webkit-border-radius : 20px;
-    -khtml-border-radius : 20px;
-    border-radius : 20px;
-    padding : 2px;
-    padding-left : 3px;
+    -moz-border-radius : 10px;
+    -webkit-border-radius : 10px;
+    -khtml-border-radius : 10px;
+    border-radius : 10px;
+    padding : 5px;
+    padding-left : 5px;
     outline : none;
-    padding-right : 3px;
+    padding-right : 5px;
     background-image : url(https://i.imgur.com/AgXOBtX.png);
     font-family : Verdana;
-    font-size : 10px;
-    COLOR : #CEB6B6;
+    font-size : 9px;
+    COLOR : #bda8a8;
 }
 
 .form-all {
@@ -1123,8 +1134,8 @@ a:hover {
 
 .form-header {
     font-family : Verdana;
-    font-size : 12px;
-    COLOR : #CEB6B6;
+    font-size : 11px;
+    COLOR : #c4a3a4;
     font-weight : normal;
 }
 
@@ -1144,34 +1155,29 @@ a:hover {
         <div class="form-header-group ">
           <div class="header-text httal ">
             <h3 id="header_6" class="form-header" data-component="header">
-              contact me ♡
+              　　　　<sub><sub><img height="25px" width="auto" src="https://i.imgur.com/jUTK2fa.png"></sub></sub>&nbsp;&nbsp;<font style="font-size:11px; color:#c4a3a4;">contact me ..</font>
             </h3>
           </div>
         </div>
       </li>
       <li class="form-line" data-type="control_fullname" id="id_3">
-        <label class="form-label form-label-left form-label-auto" id="label_3" for="first_3"> 。your lovely name : </label>
+        <label class="form-label form-label-left form-label-auto" id="label_3" for="first_3" style="margin-right:-50px; cursor: url(https://i.imgur.com/C9RGjYt.png), progress;">　name : </label>
         <div id="cid_3" class="form-input">
           <div data-wrapper-react="true">
             <span class="form-sub-label-container" style="vertical-align:top">
               <input type="text" id="first_3" name="q3_yourLovely3[first]" class="form-textbox" size="10" value="" data-component="first" />
-              <label class="form-sub-label" for="first_3" id="sublabel_first" style="min-height:13px"> first </label>
-            </span>
-            <span class="form-sub-label-container" style="vertical-align:top">
-              <input type="text" id="last_3" name="q3_yourLovely3[last]" class="form-textbox" size="15" value="" data-component="last" />
-              <label class="form-sub-label" for="last_3" id="sublabel_last" style="min-height:13px"> last </label>
             </span>
           </div>
         </div>
       </li>
       <li class="form-line" data-type="control_email" id="id_4">
-        <label class="form-label form-label-left form-label-auto" id="label_4" for="input_4"> 。your email : </label>
+        <label class="form-label form-label-left form-label-auto" id="label_4" for="input_4" style="margin-right:-50px; cursor: url(https://i.imgur.com/C9RGjYt.png), progress;">　email : </label>
         <div id="cid_4" class="form-input">
           <input type="email" id="input_4" name="q4_yourEmail4" class="form-textbox validate[Email]" size="30" value="" placeholder=" " data-component="email" />
         </div>
       </li>
       <li class="form-line" data-type="control_textarea" id="id_5">
-        <label class="form-label form-label-left form-label-auto" id="label_5" for="input_5"> 。your text : </label>
+        <label class="form-label form-label-left form-label-auto" id="label_5" for="input_5" style="margin-right:-50px; cursor: url(https://i.imgur.com/C9RGjYt.png), progress;">　message : </label>
         <div id="cid_5" class="form-input">
           <textarea id="input_5" class="form-textarea" name="q5_yourText5" cols="30" rows="10" data-component="textarea"></textarea>
         </div>
@@ -1180,7 +1186,7 @@ a:hover {
         <div id="cid_2" class="form-input-wide">
           <div style=" outline:none; margin-left:156px" class="form-buttons-wrapper">
             <button id="input_2" type="submit" class="form-submit-button" data-component="button">
-              ･ ˢᵉᶯᵈ ･
+             <font style="font-size:9px; color:#a18283; text-shadow: 2px 2px #f2e1e1;">send</font>
             </button>
           </div>
         </div>
