--- a/credits.html
+++ b/credits.html
@@ -346,9 +346,9 @@ it is difficult to be completely transparent about how much content is edited or
 <font family = "Verdana"><font color="#AD9F97"><font style="font-size:9px">
 　　html : github<br>
 　　image : imgur / catbox.moe / google photos<br>
-　　mp3 : catbox.moe<br>
+　　audio : catbox.moe<br>
+　　video : catbox.moe<br>
 　　rar : catbox.moe<br>
-　　webm : catbox.moe<br>
 　　swf : catbox.moe<br>
 　　txt : catbox.moe<br>
 <br>
