--- a/faq.html
+++ b/faq.html
@@ -390,7 +390,7 @@ i like to use its name and variations as user in my "casual" accounts ! small an
 but i decided that i'll post, since these are information that anyone who knows me personally would know, there is nothing so secret about it :<br>
 <br>
 <font color="#d8b9af">✂</font>　my height is 167cm ( 5'5 ft ). i am medium sized.<br>
-<font color="#d8b9af">✂</font>　i weight 54kg ( 117 lbs ). i'm okay, i think i'm skinny.<br>
+<font color="#d8b9af">✂</font>　i weight 51kg ( 112 lbs ). i'm okay, i think i'm skinny.<br>
 <font color="#d8b9af">✂</font>　i don't want to share measurements here, but i really like my body shape ! according to my measures, i'm hourglass figure.<br>
 <font color="#d8b9af">✂</font>　my skin is pale, but not super pale. i hate tanning because my skin is really sensitive and turns red only ; ;<br>
 <font color="#d8b9af">✂</font>　my hair changes color very much according to the lighting, but it also becomes clearer if i go out in the sun. it's dark blond / light brown and sometimes it gets a little bit orange, but it's only noticeable in the sunlight.<br>
@@ -459,7 +459,7 @@ if i said something wrong, please let me know !
 
 <a name="dx" id="dx"></a>
 <sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　do i support self dx ?</font><br><br><br>
-<font color="#d8b9af">　( september . 15 . 2017 )</font>
+<font color="#d8b9af">　( september . 15 . 2017 + march . 02 . 2020 )</font>
 <br><br>
 <font color="#B1A69E">
 self diagnosis, deductions based on internet searches are safe ?<br>
@@ -483,7 +483,7 @@ this is what i can say for now :<br>
 <br>
 　ഒ　i do have problems with socializing, and i feel very anxious and i can't breath properly when i'm around lots of unknown people, specially if they are looking at me and if i'm alone. i feel better when i have someone i can really trust with me, but i usually don't put myself in unconfortable situations.<br>
 <br>
-　ഒ　i had bad experiences at home, some people from my family are not good for me and made me feel very awful things. my mom is a good person and i love her, even though my relationship with her has also been quite distant since i grew up.<br>
+　ഒ　i had bad experiences at home, some people from my family are not good for me and made me feel very awful things. my mom is a good person and i love her, but my relationship with her has been quite distant since i grew up. she passed away recently.<br>
 <br>
 　ഒ　about some bad experiences i do not have clear memories. sometimes in bad situations, i lost consciousness. from time to time i have bad dreams about uncomfortable experiences. even though they happened many years ago, they always seem to be in my memory, and i hate it.<br>
 <br>
