--- a/fashion.html
+++ b/fashion.html
@@ -521,6 +521,10 @@ p { margin: 0; }
 <img width="300px" height="auto" src="https://i.imgur.com/YwouNql.jpg"/><br><br>
 <br>
 
+<br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/xepNwHV.png"/><br><br>
+<br>
+
 
 <br><br>
 
