--- a/archive.html
+++ b/archive.html
@@ -322,6 +322,97 @@ font-family: Verdana;">
 
 <br>
 
+<center><img src="https://i.imgur.com/hr5KCTD.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>january . 23 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><img src="https://i.imgur.com/eVlvYVu.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+the last few days have been very comfortable, i am truly happy with the recent improvements <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i'm trying to understand and respect my feelings, cleaning my life of everything that bothers me, even if just a little bit.
+those annoying little things accumulate stress throughout the day, you know ?
+i usually have a hard time expressing my emotions and being honest, but this has been fixed and greatly improved the quality of my relationships !
+it's very important to believe in who you are and in the life you dream of living, to be able to improve consistently and not be negatively influenced by other people's ( not constructive ) opinions <sub><img src="https://i.imgur.com/k5MHWZA.gif"/></sub>
+i feel like i'm going the right way !! <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+well, i did some pretty cute things that i'll show you today..
+first, a small thing : i colored and edited a very cute drawing and the result made me proud !</pre><br>
+<br>
+
+<center><img width="420px" height="auto" src="https://i.imgur.com/bMMexej.png"></center>
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+the colors look so soft <font color="#d3a5a5" style="font-size:11px;">♡</font>
+looking at it makes me motivated to bake, it's something i love to do and i want to practice more <sub><img src="https://i.imgur.com/Wdbzz2m.gif"/></sub>
+i have a notable difficulty in baking bread.. i'll try my best <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+
+i did something new for the poofties project ( i said i wanted to move forward on projects this year, remember ? )
+i wanted to write down some relevant information about the world of poofti, and as i had already imagined that the "observer" potato wrote down things that she discovered, i decided to make her notes become something real :</pre></font></font><br>
+<br>
+
+<center>
+<font color="#d1aeb9" style="font-size:10px;">( click the notebook for going to the next pages )</font>
+<br><br>
+<img width="430px" height="auto" src="https://i.imgur.com/OxelpoU.png"
+onclick="if(this.src=='https://i.imgur.com/OxelpoU.png'){
+this.src='https://i.imgur.com/6F75y59.png'; }
+else{ this.src='https://i.imgur.com/OxelpoU.png'; }"/>
+</center>
+
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i think this was a good idea and it came out very cute, don't you think ?
+i want to make more episodes of poofties, but it's something that takes a lot of time so you'll have to wait patiently ;;
+
+next is a very beautiful dress, which used to be very short and simple, and i completely renovated it and made it longer :</pre></font></font><br>
+<br>
+
+<center><img width="400px" height="auto" src="https://i.imgur.com/8MpsWFr.png"></center>
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i feel like a princess when i wear this dress .. it's like magic !
+wearing something that changes my mood for the better is something i pay close attention to <sub><img src="https://i.imgur.com/uYMm6gZ.gif"/></sub>
+
+just like i said in the last post, i wanted to try to needle felt one more realistic little critter, and so i did :</pre></font></font><br>
+
+
+<center><img width="310px" height="auto" src="https://i.imgur.com/a8kEvEw.png"><br><br>
+<img width="290px" height="auto" src="https://i.imgur.com/cbj85BN.png"></center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it's a sleepy baby bunny <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+isn't it precious ? i'm in love.. it's very small & delicate
+i won't sell this one, i will keep it to myself. i don't usually keep those little critters for myself, but this time i think i'm deserving a little gift ..
+
+that's it for today, i hope you are enjoying the updates !
+dear reader, please take care and rest when necessary. never blame yourself for feeling tired <font color="#d3a5a5" style="font-size:11px;">♡</font></pre>
+<br>
+xoxo <sub><sub><img src="https://i.imgur.com/ifHAkah.gif"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/hr5KCTD.png"/></center>
+
+<br><br><br>
+
+<br>
+
 <center><img src="https://i.imgur.com/zncXxx2.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
